<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:text="@string/profil_anda"
                />

            <!-- Kotak Foto Profil -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginHorizontal="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgProfil"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/person_default"
                    android:contentDescription="@string/hint_foto_profil" />

                <Button
                    android:id="@+id/upFoPro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/grey"
                    android:text="@string/pilih_gambar"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/hint_nama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/hint_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="12dp"
                android:text="@string/verifikasi_email"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/hint_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                app:passwordToggleContentDescription="@string/show"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNoHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/hint_nohp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPeran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/hint_peran"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/hint_alamat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:lines="3"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPinLokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="12dp"
                app:icon="@drawable/baseline_pin_drop_24"
                app:iconTint="@color/lightRed"
                android:text="@string/pin_lokasi"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etStatusToko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/hint_status_toko"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnToko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="12dp"
                android:text="@string/tutup_toko"
                android:textColor="@color/darkRed"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUbah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="4dp"
                    android:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/baseline_create_24"
                    android:text="@string/btn_ubah"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSimpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="4dp"
                    app:icon="@drawable/baseline_save_24"
                    android:text="@string/btn_simpan"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnKeluar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="4dp"
                    android:backgroundTint="@color/darkGreen"
                    app:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:text="@string/btn_keluar" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>