<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightGreen"
    android:padding="12dp"
    tools:context=".MasukActivity">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginTop="98dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_kang_sayur"
            android:src="@drawable/logo_kang_sayur" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/head_masuk_akun"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/hint_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    app:startIconTint="@color/darkGreenB">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/hint_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:startIconTint="@color/darkGreenB"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleContentDescription="@string/show" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/lyVerif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/belum_verifikasi_e_mail"/>

                    <TextView
                        android:id="@+id/tvLinkVerif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textSize="12sp"
                        android:textColor="@color/blue"
                        android:text="@string/klik_disini"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btnMasuk"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:padding="12dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/head_masuk"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>