<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_register_login"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_kang_sayur"
            android:src="@drawable/logo_kang_sayur" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/head_daftar_akun"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_marginHorizontal="18dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="@color/darkGreenB"
                app:counterMaxLength="25"
                app:counterEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/darkGreenB">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/darkGreenB"
                app:passwordToggleEnabled="true"
                app:passwordToggleContentDescription="@string/show" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etKonfPasswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_konfpasswd"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/daftar_sebagai"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/rgPeran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbPenjual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_penjual"
                    android:textSize="16sp"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbPembeli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/hint_pembeli"
                    android:textSize="16sp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/validRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:visibility="gone"
                android:textSize="13sp"
                android:textColor="@color/darkRed"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/noHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_nohp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/id_sd_24dp"
                app:startIconTintMode="screen"
                app:prefixText="+62">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="15"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkGreen"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/daftar"
                android:textSize="16sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>