<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".PhoneVerifActivity"
    android:id="@+id/phoneVerifLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Masukkan Kode Verifikasi"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/roboto"
        android:text="Kode verifikasi telah dikirim ke nomor HP Anda"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kodeVerif"
        android:layout_marginTop="64dp"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Kode Verifikasi"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/waktu_tunggu_resend_kode"/>

        <TextView
            android:id="@+id/timerCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/hint_timer"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnKirimUlang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/kirim_ulang_kode"/>

        <Button
            android:id="@+id/btnVerif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/verifikasi"/>

    </LinearLayout>

</LinearLayout>